cluster/homelab/apps/external-ingress/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
    name: plex
    namespace: ingress-nginx
subsets:
    - addresses:
        - ip: 192.168.1.20
      ports:
        - name: app
          port: 32400
          protocol: TCP
