cluster/homelab/apps/external-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: plex
    namespace: ingress-nginx
spec:
    ports:
        - name: plex
          port: 32400
          protocol: TCP
          targetPort: 32400
    clusterIP: None
    type: ClusterIP
