cluster/homelab/apps/external-ingress/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jellyfin-ingress
    namespace: ingress-nginx
    annotations:
#        cert-manager.io/cluster-issuer: "letsencrypt"
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - "*.stefangenov.site"
          secretName: ingress
    rules:
        - host: jellyfin.stefangenov.site
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: jellyfin
                            port:
                                number: 8096

---

apiVersion: v1
kind: Service
metadata:
    name: jellyfin
    namespace: ingress-nginx
spec:
    ports:
        - name: jellyfin
          port: 8096
          protocol: TCP
          targetPort: 8096
    clusterIP: None
    type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
    name: jellyfin
    namespace: ingress-nginx
subsets:
    - addresses:
          - ip: 192.168.1.151
      ports:
          - name: app
            port: 8096
            protocol: TCP
