cluster/homelab/apps/external-ingress/nas-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nas-ingress
    namespace: ingress-nginx
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:cntl3Uo=,iv:YGPLB71WjJsZP2ZE/CLOdN7vba6Z4Xj8hdjWHz9T7mA=,tag:3AylX9JaWKART4mJV2VDVA==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:l2Jt2A==,iv:aN8l6DOZdFKW6ql5ADJPagHxWG1nnPpFoKZMJH6vE1E=,tag:uScWChXowiU74VS6PmqCmA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:+hXB9F/1a161+NDYkJum,iv:Gc3CIxsF9ZB3i0GfsfQ+eFO6XCgali5fj3mzOpY4R8U=,tag:rFpY2Fel5b+ZHgHSBBADPg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:qMaQMSkVfA==,iv:547OJE6RsqtetW3DRk9pTmLGcMP66fcq19IQ/AclfLk=,tag:pbU1B8ZrAc8bQ5TZpX7Tfw==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:ePdWaxALoBA=,iv:QEcRm/b31ESGS1OniUcKoqKCRQkIVqIU0z6EDDR7au4=,tag:Pb2fP+2jq8QTCuwkAv6zuQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:Lgt5wyVX4es=,iv:UQHqh6pWWlLKV47VDMnxlnN+CcW/PrOTgqXM5VVHzx8=,tag:bMyk4OinI3fq8hSGx8KUrw==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:n7pQZNAMwv7i21k=,iv:BuwOS3huO3IsnTBysc3j80e9e8s7UVEijYg1Mp3R7Ws=,tag:aWMBVI+fOM4QkipFbsQ67w==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:aJ5zbdnlt/My9cVDiMwmRnK6R/uFKSsCWYCDtQ==,iv:QUIcFUMhPv4gnt17JPhxFTIcWt49HYJWz/MoeqvV1QQ=,tag:Lf9r5RRh1mHSN/aEPo9Szg==,type:str]
        gethomepage.dev/widget.username: ENC[AES256_GCM,data:IftEvBeTWF0QaUXj,iv:5zgnW5dkpRj3+TGTzy8JSqw2cPwQVvRSuMEqXtagioU=,tag:Qh7joMRYeBXCGwbF4VwfPQ==,type:str]
        gethomepage.dev/widget.password: ENC[AES256_GCM,data:V1gyrus/HHDtlCPWd7NV01evrM2vPmpc2YTCkQ==,iv:4Pcd0shFe5H0cNIwEJc6m5+lM0uqtY+TCsg+bsIXVPM=,tag:0KMzGxX3Uoxw6H/0E5aYHw==,type:str]
spec:
    tls:
        - hosts:
            - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: ENC[AES256_GCM,data:MjIBO+zIG37gY5s6Na80LnTMfCs=,iv:sOwGxI9+TVwa4ssYKYSO5YRaZGV/7hxa+CUF/qZhyGg=,tag:Wdi19YGRdMwFAaJ8JYgo3Q==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: nas
                        port:
                            number: 5001
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5WnRHQ1dJdE42QU8yVVNI
[...]
            3VqAPP2TsLb9Gh6LAw3p0XzPeYuooXMQEI8KiGA6pMBbIINSaP9b3g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-12T08:58:29Z"
    mac: ENC[AES256_GCM,data:aU63MF4VO7bV3tJFvo/NX3krp/fREIqYniGf7XDxaFDYSb9E3Y9GZP38qR6AAxmwLGZ+emYjYbVGP+V37b7DzyMr6pJyF/eKQ+oAByEI40BSDUcvDxXXkQNUND31EeoYcLn10ri+MwXV+CYXBZ0EVFIEhwWIqX0UgIKAqxtsfxM=,iv:5ZdVLJmJBr+ryjuSMRKHJnLY2mp79NZ/RUPPvECkNLY=,tag:bTxysGcC7tPx+AZyStYDEA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: v1
kind: Service
metadata:
    name: nas
    namespace: ingress-nginx
spec:
    ports:
        - name: nas
          port: 5001
          protocol: TCP
          targetPort: 5001
    clusterIP: None
    type: ClusterIP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5WnRHQ1dJdE42QU8yVVNI
[...]
            3VqAPP2TsLb9Gh6LAw3p0XzPeYuooXMQEI8KiGA6pMBbIINSaP9b3g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-12T08:58:29Z"
    mac: ENC[AES256_GCM,data:aU63MF4VO7bV3tJFvo/NX3krp/fREIqYniGf7XDxaFDYSb9E3Y9GZP38qR6AAxmwLGZ+emYjYbVGP+V37b7DzyMr6pJyF/eKQ+oAByEI40BSDUcvDxXXkQNUND31EeoYcLn10ri+MwXV+CYXBZ0EVFIEhwWIqX0UgIKAqxtsfxM=,iv:5ZdVLJmJBr+ryjuSMRKHJnLY2mp79NZ/RUPPvECkNLY=,tag:bTxysGcC7tPx+AZyStYDEA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: v1
kind: Endpoints
metadata:
    name: nas
    namespace: ingress-nginx
subsets:
    - addresses:
        - ip: 192.168.1.39
      ports:
        - name: app
          port: 5001
          protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5WnRHQ1dJdE42QU8yVVNI
[...]
            3VqAPP2TsLb9Gh6LAw3p0XzPeYuooXMQEI8KiGA6pMBbIINSaP9b3g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-12T08:58:29Z"
    mac: ENC[AES256_GCM,data:aU63MF4VO7bV3tJFvo/NX3krp/fREIqYniGf7XDxaFDYSb9E3Y9GZP38qR6AAxmwLGZ+emYjYbVGP+V37b7DzyMr6pJyF/eKQ+oAByEI40BSDUcvDxXXkQNUND31EeoYcLn10ri+MwXV+CYXBZ0EVFIEhwWIqX0UgIKAqxtsfxM=,iv:5ZdVLJmJBr+ryjuSMRKHJnLY2mp79NZ/RUPPvECkNLY=,tag:bTxysGcC7tPx+AZyStYDEA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
