cluster/homelab/apps/external-ingress/nas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nas-ingress
    namespace: ingress-nginx
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    tls:
        - hosts:
              - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: nas.stefangenov.site
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: nas
                            port:
                                number: 5001
---

apiVersion: v1
kind: Service
metadata:
    name: nas
    namespace: ingress-nginx
spec:
    ports:
        - name: nas
          port: 5001
          protocol: TCP
          targetPort: 5001
    clusterIP: None
    type: ClusterIP
---

apiVersion: v1
kind: Endpoints
metadata:
    name: nas
    namespace: ingress-nginx
subsets:
    - addresses:
          - ip: 192.168.1.20
      ports:
          - name: app
            port: 5001
            protocol: TCP
