cluster/homelab/apps/external-ingress/pialert-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pialert-ingress
    namespace: ingress-nginx
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    tls:
        - hosts:
              - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: pialert.stefangenov.site
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: pialert
                            port:
                                number: 80
---

apiVersion: v1
kind: Service
metadata:
    name: pialert
    namespace: ingress-nginx
spec:
    ports:
        - name: pialert
          port: 80
          protocol: TCP
          targetPort: 80
    clusterIP: None
    type: ClusterIP
---

apiVersion: v1
kind: Endpoints
metadata:
    name: pialert
    namespace: ingress-nginx
subsets:
    - addresses:
          - ip: 192.168.1.63
      ports:
          - name: app
            port: 80
            protocol: TCP
