cluster/homelab/apps/external-ingress/plex-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: plex-ingress
    namespace: ingress-nginx
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:Kx5x6/0=,iv:Oa3IjnZig4ab3EurM944K35/KY7O/Pi4WQ0AQNDqNzU=,tag:tlrx9H33out3ZXcvOcwiAQ==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:cOyKgg==,iv:zOLaKaD7c8mPKJmY1/2VETNH/gMPKaPbWBIesKSlZGw=,tag:6RGXElRV32y1dHzoCQJptA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:mbHJ2cNu4bJdDg+cLgBDJLeTSTgOHqvccpk=,iv:hWQYt3SpHakda07VqL4bVCZArF0Wmfc6mdt0a9qCFFQ=,tag:uhDd6zCi0dL7WsEXwMyLGA==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:H3vH42o=,iv:X94Yo8QAAmA6aall2+LbcYdLweUGmyC2eiWDu6CWpoA=,tag:7kNAKkjVadWChNJ0DtJOIQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:bd59eg==,iv:jzHopYtlYWCVnAVNxN0ftAijSQBfjd/L55/vZys+GGQ=,tag:T5CBjJPVuXgdF2iy3qL/kQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:EMonhg==,iv:Xkd6XYMTbrRx8WQhc5YEya4uJaLIGt4j9bIS5dzWlIk=,tag:n3oRI9dEo9IoIXG+j1gWbQ==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:uK9okA==,iv:gUI6XWEKAHeQo2ID62AEr61WyWZ/5TU9ilKroKNu6NA=,tag:+G+MUgm0ZQVQjrz74B8J+w==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:PJZVh2gP1DKwZ3Q8M29KtauuUGIdI/WDB5Q+FL4=,iv:Czf4UBOihZWQyXSa227OEzIHfs+OO/LOGujC+ySjwh4=,tag:26qRomgE8RHXVL5ftjtfug==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:Z8+SHTvqt/1gi4fumcN2G+ZhNjI=,iv:b6ZqjeFlUrXSRnTNRTU9AQoelFmLIQ/owjNvDFXXlPM=,tag:mwddSBycKj25eNlnqygqZw==,type:str]
spec:
    tls:
        - hosts:
            - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: ENC[AES256_GCM,data:eY0hJ/aeCvA30Sf9nzT3a6pAzatF,iv:c1MmVHBOyHe0bDVytmodg7GaE8US8bP0K55dClpQZ4s=,tag:sBFvxaaMK442Ed2Q8FMetA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: plex
                        port:
                            number: 32400
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3cDRGZ1BWMEd5bHFMMWtV
[...]
            esGnKaiDIdpFsMlQC8/nM1MYYEkZxCMoiC4/u3ZiIA5rlgKxuK0Q7Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-02-15T10:05:56Z"
    mac: ENC[AES256_GCM,data:8Ql8W4q57Qqmi6O/tzC33p4lf4gXRr65qARhIevELM1I+C5Zc8dEyYUBgE5YN1IUq2q5lZpDtETME4r2XX23LuD/9hYuTrXZcP9vn0B/RBz3nihp6F72DnDL8+VwYy9d7QcamB5CMeLVpNa0FtNP1h1Y4xv9kAj1WZoev+RvokQ=,iv:qagTrvZEzWjPN5d2FK2dIdFzn1u0E7c8+rC0EnvSIvw=,tag:b/BkiOhurizPiC3DBcmkxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: v1
kind: Service
metadata:
    name: plex
    namespace: ingress-nginx
spec:
    ports:
        - name: plex
          port: 32400
          protocol: TCP
          targetPort: 32400
    clusterIP: None
    type: ClusterIP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3cDRGZ1BWMEd5bHFMMWtV
[...]
            esGnKaiDIdpFsMlQC8/nM1MYYEkZxCMoiC4/u3ZiIA5rlgKxuK0Q7Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-02-15T10:05:56Z"
    mac: ENC[AES256_GCM,data:8Ql8W4q57Qqmi6O/tzC33p4lf4gXRr65qARhIevELM1I+C5Zc8dEyYUBgE5YN1IUq2q5lZpDtETME4r2XX23LuD/9hYuTrXZcP9vn0B/RBz3nihp6F72DnDL8+VwYy9d7QcamB5CMeLVpNa0FtNP1h1Y4xv9kAj1WZoev+RvokQ=,iv:qagTrvZEzWjPN5d2FK2dIdFzn1u0E7c8+rC0EnvSIvw=,tag:b/BkiOhurizPiC3DBcmkxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: v1
kind: Endpoints
metadata:
    name: plex
    namespace: ingress-nginx
subsets:
    - addresses:
        - ip: 192.168.1.20
      ports:
        - name: app
          port: 32400
          protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3cDRGZ1BWMEd5bHFMMWtV
[...]
            esGnKaiDIdpFsMlQC8/nM1MYYEkZxCMoiC4/u3ZiIA5rlgKxuK0Q7Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-02-15T10:05:56Z"
    mac: ENC[AES256_GCM,data:8Ql8W4q57Qqmi6O/tzC33p4lf4gXRr65qARhIevELM1I+C5Zc8dEyYUBgE5YN1IUq2q5lZpDtETME4r2XX23LuD/9hYuTrXZcP9vn0B/RBz3nihp6F72DnDL8+VwYy9d7QcamB5CMeLVpNa0FtNP1h1Y4xv9kAj1WZoev+RvokQ=,iv:qagTrvZEzWjPN5d2FK2dIdFzn1u0E7c8+rC0EnvSIvw=,tag:b/BkiOhurizPiC3DBcmkxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
