cluster/homelab/apps/external-ingress/plex-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: ingress-nginx
  annotations:
#        cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - '*.stefangenov.site'
      secretName: ingress
  rules:
    - host: plex.stefangenov.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plex
                port:
                  number: 32400
---

apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: ingress-nginx
spec:
  ports:
    - name: plex
      port: 32400
      protocol: TCP
      targetPort: 32400
  clusterIP: None
  type: ClusterIP
---

apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.1.151
    ports:
      - name: app
        port: 32400
        protocol: TCP
