cluster/homelab/apps/external-ingress/siteinspector-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: siteinspector-ingress
    namespace: ingress-nginx
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    tls:
        - hosts:
              - '*.stefangenov.site'
          secretName: ingress
    rules:
        - host: siteinspector.stefangenov.site
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: siteinspector
                            port:
                                number: 808
---

apiVersion: v1
kind: Service
metadata:
    name: siteinspector
    namespace: ingress-nginx
spec:
    ports:
        - name: siteinspector
          port: 808
          protocol: TCP
          targetPort: 808
    clusterIP: None
    type: ClusterIP
---

apiVersion: v1
kind: Endpoints
metadata:
    name: siteinspector
    namespace: ingress-nginx
subsets:
    - addresses:
          - ip: 192.168.1.151
      ports:
          - name: app
            port: 808
            protocol: TCP
